# voicegeneratorIA

./: .env.example  .gitignore  CONTEXT.md  README.md  ROADMAP.md  TASKS.md  presets.json  pyproject.toml  requirements.txt  voice.py
.github/workflows/: build.yml
app/: components.json  electron.vite.config.js  package-lock.json  package.json  tailwind.config.js
app/src/main/: index.js
app/src/preload/: index.js
app/src/renderer/: index.html
app/src/renderer/src/: App.jsx  MiniApp.jsx  index.css  main.jsx
app/src/renderer/src/components/: ApiKeyModal.jsx  ChatInput.jsx  FilenameInput.jsx  GenerateButton.jsx  HistoryPanel.jsx  LiveWaveform.jsx  OrbArea.jsx  OrbSettingsPanel.jsx  PresetEditor.jsx  PresetPills.jsx  StatusBar.jsx  TextArea.jsx  TitleBar.jsx
app/src/renderer/src/components/ui/ui/: orb.jsx  waveform.jsx
app/src/renderer/src/hooks/: useAudioPlayer.js  useContainerSize.js  useOrbSettings.js  useTheme.js
